Ver 1.3 * Added a URL parameter (layers) to allow the client to load arbitrary layers, even layers that are not defined in the catalog (that will be used by the MetadataViewer) * Added a URL parameter (viewport) to control the size of the map (.../index.html?viewport=3000x2500) * Commented layer preview for Google layers (will be added back when the other layers will have their own preview) * Added a layer attribute to KML, to be able to load them on other projections. * Added an exception to disable map tools when there is more than one map (side by side). * PrintFrame: Added corner handle, to simplify the manipulation for the frame. * Added an appearance attribute to add arbitrary HTML code to the HEAD of the client HTML page. * Added special support for Metadata document support (TC211); use the applicationProfile field to defile layer overrides. * Added disk cache for any downloaded document (server side)